# ssh-serial-bridge

./: Cargo.toml  README.md  build-flash-images.sh  build.rs  cfg.toml  cfg.toml.mini-ssh-bridge-board  cfg.toml.ssh-bridge-board  cfg.toml.tmp  cfg.toml.xiao-esp32s3  partitions.csv  sdkconfig.defaults  setup_components.sh  setup_env.sh
.cargo/: config.toml
components/ssh_bridge/: CMakeLists.txt  ssh_bridge.c
components/ssh_bridge/include/: ssh_bridge.h
hw/: ssh-bridge-for-raspberrypi.csv  ssh-bridge-for-raspberrypi.kicad_pcb  ssh-bridge-for-raspberrypi.kicad_prl  ssh-bridge-for-raspberrypi.kicad_pro  ssh-bridge-for-raspberrypi.kicad_sch
hw/Library.pretty/: ESP32-S3-WROOM-1_EXP.kicad_mod  ST7789V TFT SPI DISPLAY 320x240.kicad_mod  USB_A_5075AR-04.kicad_mod  USB_C_5077CR-16-SMC2-BK-TR.kicad_mod
hw/mini-ssh-serial-bridge/: BOM.csv  min-ssh-serial-bridge.kicad_pcb  min-ssh-serial-bridge.kicad_prl  min-ssh-serial-bridge.kicad_pro  min-ssh-serial-bridge.kicad_sch
hw/mini-ssh-serial-bridge/Library.pretty/: OLED I2C DISPLAY.kicad_mod  ST7789V TFT SPI DISPLAY 320x240 GMT020-02-8P.kicad_mod  SW_SKRPACE010_4mm_3mm.kicad_mod
hw/mini-ssh-serial-bridge/production/: bom.csv  designators.csv  netlist.ipc  positions.csv
hw/production/: bom.csv  designators.csv  netlist.ipc  positions.csv
src/: boot_log.rs  btn_ctrl.rs  gpio_ctrl.rs  httpserver.rs  main.rs  mini_display.rs  serial_display.rs  syslogger.rs  usb_host.rs  wifi.rs
