[package]
name = "ssh-serial-bridge"
version = "0.1.0"
authors = ["Hiroshi Nakajima <hnakamiru1103@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.71"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["native"]
native = ["esp-idf-sys/native"]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-sys = { version = "0.36" }
esp-idf-svc = { version = "0.51" }
esp-idf-hal = "0.45"
embedded-svc = "0.28"
anyhow = "1"
heapless = "0.8.0"
chrono = "0.4.38"
toml-cfg = "0.1.3"
embedded-graphics = "0.8.1"
display-interface-spi = "0.5.0"
mipidsi = "0.8.0"
ssd1306 = "0.8.4"

[build-dependencies]
embuild = "0.31.3"
anyhow = "1"

[[package.metadata.esp-idf-sys.extra_components]]
component_dirs = ["components"]

